white space fo nav btn fixed

--- a/Infinity-Landing/src/section1/section1.css
+++ b/Infinity-Landing/src/section1/section1.css
@@ -31,7 +31,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 12%; 
+  margin-top: 8%; 
 }
 #mainbtn{
  background: blue;
@@ -44,6 +44,7 @@
  padding: 1% 2%;
  color: white;
  border-radius: 5px;
+ white-space: nowrap;
 }
 #p1{
   margin-top: 2%;
